--- a/src/partials/contact-form.html
+++ b/src/partials/contact-form.html
@@ -1,9 +1,10 @@
 <section class="section contact-form__section">
     <div class="container">
+        <h2 class="visually-hidden" >Contact-form</h2>
         <p class="title contact-form__title">DON’T FORGET TO SIGN UP</p>
         <p class="contact-form__text">Find out early about all upcoming promotions and new product releases with
         our newsletter.</p>
-        <form class="contact-form__wrapper" action="">
+        <form class="contact-form__wrapper" action="#">
             <input class="contact-form__input" type="email" name="email" placeholder="Enter your email address....." autofocus required>
             <button type="submit" class="btn contact-form__btn">SUBSCRIBE</button>
         </form>
