--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -5,7 +5,7 @@
 
 <ul class="nav-menu">
     <li class="nav-menu__item">
-        <a class="nav-menu__link" href="#hero">HOME</a>
+        <a class="nav-menu__link nav-menu__link--current" href="#hero">HOME</a>
     </li>
     <li class="nav-menu__item">
         <a class="nav-menu__link" href="#project">PROJECT</a>
